--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server/index.js",
-    "start": "node server/index.js"
+    "start": "node index.js",
+    "build": "[my-framework] build --output public"
   },
   "author": "huynhat2691",
   "license": "ISC",
